--- a/index.html
+++ b/index.html
@@ -104,6 +104,20 @@
 
       </div>
     </div>
+    
+    <div class="container">
+      <div class="row">
+        <p class="slidertext">How our girls looks</p>
+
+        <div class="fotorama"
+        data-width="100%"
+       data-height="100%"
+       data-keyboard="true">
+  <img src="./css/image/1slide.jpg" alt="women">
+  <img src="./css/image/2slide.jpg" alt="women">
+  <img src="./css/image/3slide.jpg" alt="women">
+</div>
+
 
 
     <!--forma-->
