--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-    <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,7 +27,7 @@
       <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-offset-4">
-              <h2>Girlwithmac</h2>
+              <h2>Girl with mac</h2>
             </div>
             <div class="col-lg-2 col-md-offset-2">
               <a href="#buy">
@@ -51,7 +50,7 @@
             <p class="wow bounceInLeft"><span>We love</span><br> girls and<br>macbooks</p>
           </div>
           <div class="col-lg-5 col-md-offset-1 sugar">
-            <p class="wow bounceInRight">We are company with full spectre of girls.Our clients are Slutsk Sugar Factory andSlutsk meat-packing plant. We love to provide girls to companies and peoples.</p>
+            <p class="wow bounceInRight">We are company with full spectre of girls. Our clients are Slutsk Sugar Factory and Slutsk meat-packing plant. We love to provide girls to companies and peoples.</p>
           </div>
         </div>
       </div>
@@ -101,21 +100,42 @@
             </div>
           </div>
 
-
-      </div>
-    </div>
-    
+    <!--slider-->
     <div class="container">
       <div class="row">
         <p class="slidertext">How our girls looks</p>
-        <div class="fotorama"
-        data-width="100%"
-       data-height="100%"
-       data-keyboard="true">
-  <img src="./css/image/1slide.jpg" alt="women">
-  <img src="./css/image/2slide.jpg" alt="women">
-  <img src="./css/image/3slide.jpg" alt="women">
-</div>
+
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img src="./css/image/3slide.jpg" alt="slide 1">
+        </div>
+
+        <div class="item">
+          <img src="./css/image/2slide.jpg" alt="slide 2">
+        </div>
+
+        <div class="item">
+          <img src="./css/image/1slide.jpg" alt="slide 3">
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+      </div>
+    </div>
+
 
     <!--forma-->
     <div class="container forma">
@@ -131,7 +151,7 @@
 
     <footer>
       <div class="row footer">
-        <p>© 2016 Designed by Maxon. Coded by Dimas.</p>
+        <p>© 2016 Flattern studio</p>
       </div>
     </footer>
 
@@ -144,7 +164,6 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script>
